General style tweeks, fixed spacing and got rid of extra scrollbars

--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -34,6 +34,7 @@
 .add-materials {
   margin-left: 250px;
   width: 75%;
+  margin-top: 40px;
 }
 
 .md-form {
@@ -52,4 +53,14 @@
 .md-form .prefix {
   font-size: 1rem;
   top: 1.2rem;
+
+}
+
+.progressBar{
+  margin: 50px 0px;
+
+}
+
+.dropdown-menu {
+  min-width: 16.8rem;
 }
